parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON
    COMMENT
    DET
    DOT
    INV
    LSQ
    NOT_EQ
    NULL
    RSQ
    TRAN

Grammar

Rule 0     S' -> PROG
Rule 1     EMPTY -> <empty>
Rule 2     MAIN -> PRINCIPAL LPAREN RPAREN BLOQUE
Rule 3     PROG -> PROGRAMA ID SEMI_COLON VARS FUNCTION MAIN
Rule 4     VARS -> VAR TIPO
Rule 5     VARS -> EMPTY
Rule 6     TIPO -> INT VAR_INT SEMI_COLON TIPO
Rule 7     TIPO -> FLOAT VAR_TIPO SEMI_COLON TIPO
Rule 8     TIPO -> CHAR VAR_TIPO SEMI_COLON TIPO
Rule 9     TIPO -> EMPTY
Rule 10    VAR_INT -> ID LIST_ID_ONE COMMA VAR_INT
Rule 11    VAR_INT -> ID LIST_ID_TWO COMMA VAR_INT
Rule 12    VAR_INT -> ID COMMA VAR_INT
Rule 13    VAR_INT -> ID LIST_ID_ONE
Rule 14    VAR_INT -> ID LIST_ID_TWO
Rule 15    VAR_INT -> ID
Rule 16    VAR_TIPO -> ID COMMA
Rule 17    VAR_TIPO -> ID
Rule 18    FUNCTION -> FUNCION TIPO_FUNC ID LPAREN PARAMETROS RPAREN VARS BLOQUE FUNCTION
Rule 19    FUNCTION -> EMPTY
Rule 20    TIPO_FUNC -> INT
Rule 21    TIPO_FUNC -> FLOAT
Rule 22    TIPO_FUNC -> CHAR
Rule 23    TIPO_FUNC -> VOID
Rule 24    PARAMETROS -> INT ID
Rule 25    PARAMETROS -> FLOAT ID
Rule 26    PARAMETROS -> CHAR ID
Rule 27    PARAMETROS -> COMMA PARAMETROS
Rule 28    DESDE_CICLO -> DESDE ID EQ CTE_I HASTA CTE_I HACER BLOQUE
Rule 29    LECTURA -> LEE LPAREN ID RPAREN SEMI_COLON
Rule 30    ESCRITURA -> ESCRIBE LPAREN TIPO_PARAMETROS RPAREN SEMI_COLON
Rule 31    LLAMADA -> ID LPAREN TIPO_PARAMETROS RPAREN SEMI_COLON
Rule 32    TIPO_PARAMETROS -> ID COMMA TIPO_PARAMETROS
Rule 33    TIPO_PARAMETROS -> CTE_I COMMA TIPO_PARAMETROS
Rule 34    TIPO_PARAMETROS -> CTE_F COMMA TIPO_PARAMETROS
Rule 35    TIPO_PARAMETROS -> CTE_C COMMA TIPO_PARAMETROS
Rule 36    TIPO_PARAMETROS -> CTE_S COMMA TIPO_PARAMETROS
Rule 37    TIPO_PARAMETROS -> EXPRESION COMMA TIPO_PARAMETROS
Rule 38    TIPO_PARAMETROS -> ID
Rule 39    TIPO_PARAMETROS -> CTE_I
Rule 40    TIPO_PARAMETROS -> CTE_F
Rule 41    TIPO_PARAMETROS -> CTE_C
Rule 42    TIPO_PARAMETROS -> CTE_S
Rule 43    TIPO_PARAMETROS -> EXPRESION
Rule 44    ESTATUTO -> SI LPAREN EXPRESION RPAREN ENTONCES BLOQUE ESTATUTO_SINO
Rule 45    ESTATUTO_SINO -> SINO BLOQUE
Rule 46    ESTATUTO_SINO -> EMPTY
Rule 47    MIENTRAS_CICLO -> MIENTRAS LPAREN EXPRESION RPAREN HAZ BLOQUE
Rule 48    EXPRESION -> ID OPERADOR_LOGICO EXPRESION
Rule 49    EXPRESION -> ID OPERADOR_ARITMETICO EXPRESION
Rule 50    EXPRESION -> ID LIST_ID_TWO OPERADOR_LOGICO EXPRESION
Rule 51    EXPRESION -> ID LIST_ID_TWO OPERADOR_ARITMETICO EXPRESION
Rule 52    EXPRESION -> ID LIST_ID_ONE OPERADOR_LOGICO EXPRESION
Rule 53    EXPRESION -> ID LIST_ID_ONE OPERADOR_ARITMETICO EXPRESION
Rule 54    EXPRESION -> CONSTANTE OPERADOR_LOGICO EXPRESION
Rule 55    EXPRESION -> CONSTANTE OPERADOR_ARITMETICO EXPRESION
Rule 56    EXPRESION -> LLAMADA_ASIGNACION OPERADOR_LOGICO EXPRESION
Rule 57    EXPRESION -> LLAMADA_ASIGNACION OPERADOR_ARITMETICO EXPRESION
Rule 58    EXPRESION -> LPAREN EXPRESION RPAREN EXPRESION
Rule 59    EXPRESION -> LPAREN EXPRESION RPAREN
Rule 60    EXPRESION -> ID
Rule 61    EXPRESION -> ID LIST_ID_TWO
Rule 62    EXPRESION -> ID LIST_ID_ONE
Rule 63    EXPRESION -> LLAMADA_ASIGNACION
Rule 64    EXPRESION -> CONSTANTE
Rule 65    CONSTANTE -> CTE_I
Rule 66    CONSTANTE -> CTE_F
Rule 67    CONSTANTE -> CTE_C
Rule 68    CONSTANTE -> CTE_S
Rule 69    OPERADOR_ARITMETICO -> PLUS
Rule 70    OPERADOR_ARITMETICO -> MINUS
Rule 71    OPERADOR_ARITMETICO -> MULT
Rule 72    OPERADOR_ARITMETICO -> DIV
Rule 73    OPERADOR_LOGICO -> AND
Rule 74    OPERADOR_LOGICO -> OR
Rule 75    OPERADOR_LOGICO -> GREATER
Rule 76    OPERADOR_LOGICO -> LESS
Rule 77    OPERADOR_LOGICO -> GREATER_EQ
Rule 78    OPERADOR_LOGICO -> LESS_EQ
Rule 79    OPERADOR_LOGICO -> COMPAR
Rule 80    ASIGNACION -> ID EQ ASIGNACION_AUX SEMI_COLON
Rule 81    ASIGNACION -> ID LIST_ID_TWO EQ ASIGNACION_AUX SEMI_COLON
Rule 82    ASIGNACION -> ID LIST_ID_ONE EQ ASIGNACION_AUX SEMI_COLON
Rule 83    ASIGNACION_AUX -> ID
Rule 84    ASIGNACION_AUX -> ID LIST_ID_TWO
Rule 85    ASIGNACION_AUX -> ID LIST_ID_ONE
Rule 86    ASIGNACION_AUX -> LLAMADA_ASIGNACION
Rule 87    ASIGNACION_AUX -> EXPRESION
Rule 88    LLAMADA_ASIGNACION -> ID LPAREN TIPO_PARAMETROS RPAREN
Rule 89    BLOQUE -> LBRACKET OPCION_BLOQUE RBRACKET
Rule 90    OPCION_BLOQUE -> LECTURA OPCION_BLOQUE
Rule 91    OPCION_BLOQUE -> ESCRITURA OPCION_BLOQUE
Rule 92    OPCION_BLOQUE -> LLAMADA OPCION_BLOQUE
Rule 93    OPCION_BLOQUE -> ESTATUTO OPCION_BLOQUE
Rule 94    OPCION_BLOQUE -> MIENTRAS_CICLO OPCION_BLOQUE
Rule 95    OPCION_BLOQUE -> DESDE_CICLO OPCION_BLOQUE
Rule 96    OPCION_BLOQUE -> ASIGNACION OPCION_BLOQUE
Rule 97    OPCION_BLOQUE -> EMPTY

Terminals, with rules where they appear

AND                  : 73
CHAR                 : 8 22 26
COLON                : 
COMMA                : 10 11 12 16 27 32 33 34 35 36 37
COMMENT              : 
COMPAR               : 79
CTE_C                : 35 41 67
CTE_F                : 34 40 66
CTE_I                : 28 28 33 39 65
CTE_S                : 36 42 68
DESDE                : 28
DET                  : 
DIV                  : 72
DOT                  : 
ENTONCES             : 44
EQ                   : 28 80 81 82
ESCRIBE              : 30
FLOAT                : 7 21 25
FUNCION              : 18
GREATER              : 75
GREATER_EQ           : 77
HACER                : 28
HASTA                : 28
HAZ                  : 47
ID                   : 3 10 11 12 13 14 15 16 17 18 24 25 26 28 29 31 32 38 48 49 50 51 52 53 60 61 62 80 81 82 83 84 85 88
INT                  : 6 20 24
INV                  : 
LBRACKET             : 89
LEE                  : 29
LESS                 : 76
LESS_EQ              : 78
LIST_ID_ONE          : 10 13 52 53 62 82 85
LIST_ID_TWO          : 11 14 50 51 61 81 84
LPAREN               : 2 18 29 30 31 44 47 58 59 88
LSQ                  : 
MIENTRAS             : 47
MINUS                : 70
MULT                 : 71
NOT_EQ               : 
NULL                 : 
OR                   : 74
PLUS                 : 69
PRINCIPAL            : 2
PROGRAMA             : 3
RBRACKET             : 89
RPAREN               : 2 18 29 30 31 44 47 58 59 88
RSQ                  : 
SEMI_COLON           : 3 6 7 8 29 30 31 80 81 82
SI                   : 44
SINO                 : 45
TRAN                 : 
VAR                  : 4
VOID                 : 23
error                : 

Nonterminals, with rules where they appear

ASIGNACION           : 96
ASIGNACION_AUX       : 80 81 82
BLOQUE               : 2 18 28 44 45 47
CONSTANTE            : 54 55 64
DESDE_CICLO          : 95
EMPTY                : 5 9 19 46 97
ESCRITURA            : 91
ESTATUTO             : 93
ESTATUTO_SINO        : 44
EXPRESION            : 37 43 44 47 48 49 50 51 52 53 54 55 56 57 58 58 59 87
FUNCTION             : 3 18
LECTURA              : 90
LLAMADA              : 92
LLAMADA_ASIGNACION   : 56 57 63 86
MAIN                 : 3
MIENTRAS_CICLO       : 94
OPCION_BLOQUE        : 89 90 91 92 93 94 95 96
OPERADOR_ARITMETICO  : 49 51 53 55 57
OPERADOR_LOGICO      : 48 50 52 54 56
PARAMETROS           : 18 27
PROG                 : 0
TIPO                 : 4 6 7 8
TIPO_FUNC            : 18
TIPO_PARAMETROS      : 30 31 32 33 34 35 36 37 88
VARS                 : 3 18
VAR_INT              : 6 10 11 12
VAR_TIPO             : 7 8

Parsing method: LALR

state 0

    (0) S' -> . PROG
    (3) PROG -> . PROGRAMA ID SEMI_COLON VARS FUNCTION MAIN

    PROGRAMA        shift and go to state 2

    PROG                           shift and go to state 1

state 1

    (0) S' -> PROG .



state 2

    (3) PROG -> PROGRAMA . ID SEMI_COLON VARS FUNCTION MAIN

    ID              shift and go to state 3


state 3

    (3) PROG -> PROGRAMA ID . SEMI_COLON VARS FUNCTION MAIN

    SEMI_COLON      shift and go to state 4


state 4

    (3) PROG -> PROGRAMA ID SEMI_COLON . VARS FUNCTION MAIN
    (4) VARS -> . VAR TIPO
    (5) VARS -> . EMPTY
    (1) EMPTY -> .

    VAR             shift and go to state 6
    FUNCION         reduce using rule 1 (EMPTY -> .)
    PRINCIPAL       reduce using rule 1 (EMPTY -> .)

    VARS                           shift and go to state 5
    EMPTY                          shift and go to state 7

state 5

    (3) PROG -> PROGRAMA ID SEMI_COLON VARS . FUNCTION MAIN
    (18) FUNCTION -> . FUNCION TIPO_FUNC ID LPAREN PARAMETROS RPAREN VARS BLOQUE FUNCTION
    (19) FUNCTION -> . EMPTY
    (1) EMPTY -> .

    FUNCION         shift and go to state 9
    PRINCIPAL       reduce using rule 1 (EMPTY -> .)

    FUNCTION                       shift and go to state 8
    EMPTY                          shift and go to state 10

state 6

    (4) VARS -> VAR . TIPO
    (6) TIPO -> . INT VAR_INT SEMI_COLON TIPO
    (7) TIPO -> . FLOAT VAR_TIPO SEMI_COLON TIPO
    (8) TIPO -> . CHAR VAR_TIPO SEMI_COLON TIPO
    (9) TIPO -> . EMPTY
    (1) EMPTY -> .

    INT             shift and go to state 12
    FLOAT           shift and go to state 13
    CHAR            shift and go to state 14
    FUNCION         reduce using rule 1 (EMPTY -> .)
    PRINCIPAL       reduce using rule 1 (EMPTY -> .)
    LBRACKET        reduce using rule 1 (EMPTY -> .)

    TIPO                           shift and go to state 11
    EMPTY                          shift and go to state 15

state 7

    (5) VARS -> EMPTY .

    FUNCION         reduce using rule 5 (VARS -> EMPTY .)
    PRINCIPAL       reduce using rule 5 (VARS -> EMPTY .)
    LBRACKET        reduce using rule 5 (VARS -> EMPTY .)


state 8

    (3) PROG -> PROGRAMA ID SEMI_COLON VARS FUNCTION . MAIN
    (2) MAIN -> . PRINCIPAL LPAREN RPAREN BLOQUE

    PRINCIPAL       shift and go to state 17

    MAIN                           shift and go to state 16

state 9

    (18) FUNCTION -> FUNCION . TIPO_FUNC ID LPAREN PARAMETROS RPAREN VARS BLOQUE FUNCTION
    (20) TIPO_FUNC -> . INT
    (21) TIPO_FUNC -> . FLOAT
    (22) TIPO_FUNC -> . CHAR
    (23) TIPO_FUNC -> . VOID

    INT             shift and go to state 19
    FLOAT           shift and go to state 20
    CHAR            shift and go to state 21
    VOID            shift and go to state 22

    TIPO_FUNC                      shift and go to state 18

state 10

    (19) FUNCTION -> EMPTY .

    PRINCIPAL       reduce using rule 19 (FUNCTION -> EMPTY .)


state 11

    (4) VARS -> VAR TIPO .

    FUNCION         reduce using rule 4 (VARS -> VAR TIPO .)
    PRINCIPAL       reduce using rule 4 (VARS -> VAR TIPO .)
    LBRACKET        reduce using rule 4 (VARS -> VAR TIPO .)


state 12

    (6) TIPO -> INT . VAR_INT SEMI_COLON TIPO
    (10) VAR_INT -> . ID LIST_ID_ONE COMMA VAR_INT
    (11) VAR_INT -> . ID LIST_ID_TWO COMMA VAR_INT
    (12) VAR_INT -> . ID COMMA VAR_INT
    (13) VAR_INT -> . ID LIST_ID_ONE
    (14) VAR_INT -> . ID LIST_ID_TWO
    (15) VAR_INT -> . ID

    ID              shift and go to state 24

    VAR_INT                        shift and go to state 23

state 13

    (7) TIPO -> FLOAT . VAR_TIPO SEMI_COLON TIPO
    (16) VAR_TIPO -> . ID COMMA
    (17) VAR_TIPO -> . ID

    ID              shift and go to state 26

    VAR_TIPO                       shift and go to state 25

state 14

    (8) TIPO -> CHAR . VAR_TIPO SEMI_COLON TIPO
    (16) VAR_TIPO -> . ID COMMA
    (17) VAR_TIPO -> . ID

    ID              shift and go to state 26

    VAR_TIPO                       shift and go to state 27

state 15

    (9) TIPO -> EMPTY .

    FUNCION         reduce using rule 9 (TIPO -> EMPTY .)
    PRINCIPAL       reduce using rule 9 (TIPO -> EMPTY .)
    LBRACKET        reduce using rule 9 (TIPO -> EMPTY .)


state 16

    (3) PROG -> PROGRAMA ID SEMI_COLON VARS FUNCTION MAIN .

    $end            reduce using rule 3 (PROG -> PROGRAMA ID SEMI_COLON VARS FUNCTION MAIN .)


state 17

    (2) MAIN -> PRINCIPAL . LPAREN RPAREN BLOQUE

    LPAREN          shift and go to state 28


state 18

    (18) FUNCTION -> FUNCION TIPO_FUNC . ID LPAREN PARAMETROS RPAREN VARS BLOQUE FUNCTION

    ID              shift and go to state 29


state 19

    (20) TIPO_FUNC -> INT .

    ID              reduce using rule 20 (TIPO_FUNC -> INT .)


state 20

    (21) TIPO_FUNC -> FLOAT .

    ID              reduce using rule 21 (TIPO_FUNC -> FLOAT .)


state 21

    (22) TIPO_FUNC -> CHAR .

    ID              reduce using rule 22 (TIPO_FUNC -> CHAR .)


state 22

    (23) TIPO_FUNC -> VOID .

    ID              reduce using rule 23 (TIPO_FUNC -> VOID .)


state 23

    (6) TIPO -> INT VAR_INT . SEMI_COLON TIPO

    SEMI_COLON      shift and go to state 30


state 24

    (10) VAR_INT -> ID . LIST_ID_ONE COMMA VAR_INT
    (11) VAR_INT -> ID . LIST_ID_TWO COMMA VAR_INT
    (12) VAR_INT -> ID . COMMA VAR_INT
    (13) VAR_INT -> ID . LIST_ID_ONE
    (14) VAR_INT -> ID . LIST_ID_TWO
    (15) VAR_INT -> ID .

    LIST_ID_ONE     shift and go to state 31
    LIST_ID_TWO     shift and go to state 33
    COMMA           shift and go to state 32
    SEMI_COLON      reduce using rule 15 (VAR_INT -> ID .)


state 25

    (7) TIPO -> FLOAT VAR_TIPO . SEMI_COLON TIPO

    SEMI_COLON      shift and go to state 34


state 26

    (16) VAR_TIPO -> ID . COMMA
    (17) VAR_TIPO -> ID .

    COMMA           shift and go to state 35
    SEMI_COLON      reduce using rule 17 (VAR_TIPO -> ID .)


state 27

    (8) TIPO -> CHAR VAR_TIPO . SEMI_COLON TIPO

    SEMI_COLON      shift and go to state 36


state 28

    (2) MAIN -> PRINCIPAL LPAREN . RPAREN BLOQUE

    RPAREN          shift and go to state 37


state 29

    (18) FUNCTION -> FUNCION TIPO_FUNC ID . LPAREN PARAMETROS RPAREN VARS BLOQUE FUNCTION

    LPAREN          shift and go to state 38


state 30

    (6) TIPO -> INT VAR_INT SEMI_COLON . TIPO
    (6) TIPO -> . INT VAR_INT SEMI_COLON TIPO
    (7) TIPO -> . FLOAT VAR_TIPO SEMI_COLON TIPO
    (8) TIPO -> . CHAR VAR_TIPO SEMI_COLON TIPO
    (9) TIPO -> . EMPTY
    (1) EMPTY -> .

    INT             shift and go to state 12
    FLOAT           shift and go to state 13
    CHAR            shift and go to state 14
    FUNCION         reduce using rule 1 (EMPTY -> .)
    PRINCIPAL       reduce using rule 1 (EMPTY -> .)
    LBRACKET        reduce using rule 1 (EMPTY -> .)

    TIPO                           shift and go to state 39
    EMPTY                          shift and go to state 15

state 31

    (10) VAR_INT -> ID LIST_ID_ONE . COMMA VAR_INT
    (13) VAR_INT -> ID LIST_ID_ONE .

    COMMA           shift and go to state 40
    SEMI_COLON      reduce using rule 13 (VAR_INT -> ID LIST_ID_ONE .)


state 32

    (12) VAR_INT -> ID COMMA . VAR_INT
    (10) VAR_INT -> . ID LIST_ID_ONE COMMA VAR_INT
    (11) VAR_INT -> . ID LIST_ID_TWO COMMA VAR_INT
    (12) VAR_INT -> . ID COMMA VAR_INT
    (13) VAR_INT -> . ID LIST_ID_ONE
    (14) VAR_INT -> . ID LIST_ID_TWO
    (15) VAR_INT -> . ID

    ID              shift and go to state 24

    VAR_INT                        shift and go to state 41

state 33

    (11) VAR_INT -> ID LIST_ID_TWO . COMMA VAR_INT
    (14) VAR_INT -> ID LIST_ID_TWO .

    COMMA           shift and go to state 42
    SEMI_COLON      reduce using rule 14 (VAR_INT -> ID LIST_ID_TWO .)


state 34

    (7) TIPO -> FLOAT VAR_TIPO SEMI_COLON . TIPO
    (6) TIPO -> . INT VAR_INT SEMI_COLON TIPO
    (7) TIPO -> . FLOAT VAR_TIPO SEMI_COLON TIPO
    (8) TIPO -> . CHAR VAR_TIPO SEMI_COLON TIPO
    (9) TIPO -> . EMPTY
    (1) EMPTY -> .

    INT             shift and go to state 12
    FLOAT           shift and go to state 13
    CHAR            shift and go to state 14
    FUNCION         reduce using rule 1 (EMPTY -> .)
    PRINCIPAL       reduce using rule 1 (EMPTY -> .)
    LBRACKET        reduce using rule 1 (EMPTY -> .)

    TIPO                           shift and go to state 43
    EMPTY                          shift and go to state 15

state 35

    (16) VAR_TIPO -> ID COMMA .

    SEMI_COLON      reduce using rule 16 (VAR_TIPO -> ID COMMA .)


state 36

    (8) TIPO -> CHAR VAR_TIPO SEMI_COLON . TIPO
    (6) TIPO -> . INT VAR_INT SEMI_COLON TIPO
    (7) TIPO -> . FLOAT VAR_TIPO SEMI_COLON TIPO
    (8) TIPO -> . CHAR VAR_TIPO SEMI_COLON TIPO
    (9) TIPO -> . EMPTY
    (1) EMPTY -> .

    INT             shift and go to state 12
    FLOAT           shift and go to state 13
    CHAR            shift and go to state 14
    FUNCION         reduce using rule 1 (EMPTY -> .)
    PRINCIPAL       reduce using rule 1 (EMPTY -> .)
    LBRACKET        reduce using rule 1 (EMPTY -> .)

    TIPO                           shift and go to state 44
    EMPTY                          shift and go to state 15

state 37

    (2) MAIN -> PRINCIPAL LPAREN RPAREN . BLOQUE
    (89) BLOQUE -> . LBRACKET OPCION_BLOQUE RBRACKET

    LBRACKET        shift and go to state 46

    BLOQUE                         shift and go to state 45

state 38

    (18) FUNCTION -> FUNCION TIPO_FUNC ID LPAREN . PARAMETROS RPAREN VARS BLOQUE FUNCTION
    (24) PARAMETROS -> . INT ID
    (25) PARAMETROS -> . FLOAT ID
    (26) PARAMETROS -> . CHAR ID
    (27) PARAMETROS -> . COMMA PARAMETROS

    INT             shift and go to state 48
    FLOAT           shift and go to state 49
    CHAR            shift and go to state 50
    COMMA           shift and go to state 51

    PARAMETROS                     shift and go to state 47

state 39

    (6) TIPO -> INT VAR_INT SEMI_COLON TIPO .

    FUNCION         reduce using rule 6 (TIPO -> INT VAR_INT SEMI_COLON TIPO .)
    PRINCIPAL       reduce using rule 6 (TIPO -> INT VAR_INT SEMI_COLON TIPO .)
    LBRACKET        reduce using rule 6 (TIPO -> INT VAR_INT SEMI_COLON TIPO .)


state 40

    (10) VAR_INT -> ID LIST_ID_ONE COMMA . VAR_INT
    (10) VAR_INT -> . ID LIST_ID_ONE COMMA VAR_INT
    (11) VAR_INT -> . ID LIST_ID_TWO COMMA VAR_INT
    (12) VAR_INT -> . ID COMMA VAR_INT
    (13) VAR_INT -> . ID LIST_ID_ONE
    (14) VAR_INT -> . ID LIST_ID_TWO
    (15) VAR_INT -> . ID

    ID              shift and go to state 24

    VAR_INT                        shift and go to state 52

state 41

    (12) VAR_INT -> ID COMMA VAR_INT .

    SEMI_COLON      reduce using rule 12 (VAR_INT -> ID COMMA VAR_INT .)


state 42

    (11) VAR_INT -> ID LIST_ID_TWO COMMA . VAR_INT
    (10) VAR_INT -> . ID LIST_ID_ONE COMMA VAR_INT
    (11) VAR_INT -> . ID LIST_ID_TWO COMMA VAR_INT
    (12) VAR_INT -> . ID COMMA VAR_INT
    (13) VAR_INT -> . ID LIST_ID_ONE
    (14) VAR_INT -> . ID LIST_ID_TWO
    (15) VAR_INT -> . ID

    ID              shift and go to state 24

    VAR_INT                        shift and go to state 53

state 43

    (7) TIPO -> FLOAT VAR_TIPO SEMI_COLON TIPO .

    FUNCION         reduce using rule 7 (TIPO -> FLOAT VAR_TIPO SEMI_COLON TIPO .)
    PRINCIPAL       reduce using rule 7 (TIPO -> FLOAT VAR_TIPO SEMI_COLON TIPO .)
    LBRACKET        reduce using rule 7 (TIPO -> FLOAT VAR_TIPO SEMI_COLON TIPO .)


state 44

    (8) TIPO -> CHAR VAR_TIPO SEMI_COLON TIPO .

    FUNCION         reduce using rule 8 (TIPO -> CHAR VAR_TIPO SEMI_COLON TIPO .)
    PRINCIPAL       reduce using rule 8 (TIPO -> CHAR VAR_TIPO SEMI_COLON TIPO .)
    LBRACKET        reduce using rule 8 (TIPO -> CHAR VAR_TIPO SEMI_COLON TIPO .)


state 45

    (2) MAIN -> PRINCIPAL LPAREN RPAREN BLOQUE .

    $end            reduce using rule 2 (MAIN -> PRINCIPAL LPAREN RPAREN BLOQUE .)


state 46

    (89) BLOQUE -> LBRACKET . OPCION_BLOQUE RBRACKET
    (90) OPCION_BLOQUE -> . LECTURA OPCION_BLOQUE
    (91) OPCION_BLOQUE -> . ESCRITURA OPCION_BLOQUE
    (92) OPCION_BLOQUE -> . LLAMADA OPCION_BLOQUE
    (93) OPCION_BLOQUE -> . ESTATUTO OPCION_BLOQUE
    (94) OPCION_BLOQUE -> . MIENTRAS_CICLO OPCION_BLOQUE
    (95) OPCION_BLOQUE -> . DESDE_CICLO OPCION_BLOQUE
    (96) OPCION_BLOQUE -> . ASIGNACION OPCION_BLOQUE
    (97) OPCION_BLOQUE -> . EMPTY
    (29) LECTURA -> . LEE LPAREN ID RPAREN SEMI_COLON
    (30) ESCRITURA -> . ESCRIBE LPAREN TIPO_PARAMETROS RPAREN SEMI_COLON
    (31) LLAMADA -> . ID LPAREN TIPO_PARAMETROS RPAREN SEMI_COLON
    (44) ESTATUTO -> . SI LPAREN EXPRESION RPAREN ENTONCES BLOQUE ESTATUTO_SINO
    (47) MIENTRAS_CICLO -> . MIENTRAS LPAREN EXPRESION RPAREN HAZ BLOQUE
    (28) DESDE_CICLO -> . DESDE ID EQ CTE_I HASTA CTE_I HACER BLOQUE
    (80) ASIGNACION -> . ID EQ ASIGNACION_AUX SEMI_COLON
    (81) ASIGNACION -> . ID LIST_ID_TWO EQ ASIGNACION_AUX SEMI_COLON
    (82) ASIGNACION -> . ID LIST_ID_ONE EQ ASIGNACION_AUX SEMI_COLON
    (1) EMPTY -> .

    LEE             shift and go to state 63
    ESCRIBE         shift and go to state 65
    ID              shift and go to state 64
    SI              shift and go to state 66
    MIENTRAS        shift and go to state 67
    DESDE           shift and go to state 68
    RBRACKET        reduce using rule 1 (EMPTY -> .)
